--- a/package.json
+++ b/package.json
@@ -9,14 +9,25 @@
     "prettier": "prettier --write --no-bracket-spacing --single-quote --jsx-bracket-same-line --trailing-comma all --print-width 80 'src/**/*.js'"
   },
   "dependencies": {
-    "babel-plugin-transform-runtime": "6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0",
+    "@babel/plugin-proposal-function-sent": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "ajv": "^6.12.6",
+    "expo": "^45.0.4",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "qs": "^6.4.0",
     "react": "16.0.0-alpha.6",
-    "react-native": "0.44.2",
+    "react-native": "^0.68.2",
     "react-native-code-push": "^2.1.0-beta",
     "react-native-google-places-autocomplete": "^1.2.11",
     "react-native-image-crop-picker": "^0.12.10",
@@ -26,7 +37,7 @@
     "react-native-tab-view": "0.0.58",
     "react-native-vector-icons": "^4.0.1",
     "react-native-video": "^1.0.0",
-    "react-native-youtube": "inProgress-team/react-native-youtube",
+    "react-native-youtube": "github:inProgress-team/react-native-youtube",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
@@ -37,7 +48,10 @@
     "reselect": "^3.0.0"
   },
   "devDependencies": {
-    "babel-jest": "19.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.4.2",
     "babel-preset-react-native": "1.9.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
