--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   "presets": [
-  "react-native",
-  "@babel/preset-flow"
+  "module:metro-react-native-babel-preset",
+  "@babel/preset-react"
   ]
 }
